--- a/wallify/pubspec.yaml
+++ b/wallify/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  shared_preferences: ^2.2.3
+  sqflite: ^2.3.3+1
+  flutter_dotenv: ^5.1.0
+  http: ^1.2.1
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
